--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/e">how to make a site</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KzGA6puheg5SGB5gLb0/fmYSsCyYL5oklJUYmPuxdaJV0olFb/9R/UlKZxcNx8/tltbw2GyYzbaJaxlcXbQfKesvMz7r4g0ZMH0QIpJKCcvk2PuOIaZciy7unBCIKrh/">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="werp3k8AB+TXL6btuhVizx8r0EwcqxUAaJJFYKTRpb42t5BsjD/rZIMgyZN6Kxyz/vOQdwwmyFU7KypfaTTqJ+Zi1TIHWvrEAn935neqsW18V4DPdYhqrKdC5GIJrEao">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
