--- a/newsletter.html
+++ b/newsletter.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="header11 cid-r9p0bbTBps" id="header11-6u">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="header11 cid-r9p0bbTBps" id="header11-6u">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
@@ -92,7 +92,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fUlAgJd41bl+ObeCsOjf0PA9PBG7mimQR+7Xtey7kasUTMKPF6FAwauflFe5OQrA/VCGN7htjfX4uyQJAxhz+oRwS4FzDuec+WASNG8ffhrdlG1JnJoO2ePnUspK+uSw">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UaCAC+wMKYcq6b7JnfUpnHr44RXTp96ufFEUV4yEobuBbcRGFd8L9IrOIQkXBEDUvsSxkwB/wiLck4kJiaanHidSM1O6WOhKx3Jl6nDYbIp8G/ieSAyYYbdIze8sgMk2">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-70">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Subscribe</button></span>
@@ -173,7 +173,7 @@
                             
                         </div>
                     </div>
-                <div class="mbr-figure" style="width: 56%;">
+                <div class="mbr-figure" style="width: 69%;">
                      <img src="assets/images/adult-background-beard-716658-794x529.jpg" alt="Mobirise" title="">
                 </div>
             </div>
